2021-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-01-20  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2014-09-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/int_overflow.cpp: New overflow example for undefined behavior
	sanitizer with a big Thanks! to Greg Jefferis
	* R/sanitizer.R (intOverflowSanitize): Caller for new sanitizer test
	* tests/testIntOverflowSanitize.R: Test to tickle new sanitizer
	* man/sanitizers-package.Rd: Add alias as well

2014-08-03  Dirk Eddelbuettel  <edd@debian.org>

	* tests/testStackAddressSanitize.R: Tests fail more reliably when
	integer argument is smaller, hence adjusted
	* tests/testHeapAddressSanitize.R: Idem

2014-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* Description: Finalized release 0.1.0

	* tests/testStackAddressSanitize.R: Split tests into individual files
	* tests/testHeapAddressSanitize.R: Idem

2014-08-01  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add reference to Address Sanitizer wiki
	* DESCRIPTION: Idem
	* man/sanitizers-package.Rd: Idem

2014-07-30  Dirk Eddelbuettel  <edd@debian.org>

	* Initial git commit as version 0.1.0

2014-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* Updated for useR! 2014 presentation

2014-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* Initial version
